--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Merge Conflicts</title>
+    <p>Learn to code with TrueCoder!</p>
+    <img src="images/truecoders.jpg" alt="TC Logo">
   </head>
   <body></body>
 </html>
