--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <title>Merge Conflicts</title>
-    <p>Learn to code with TrueCoder!</p>
-    <img src="images/truecoders.jpg" alt="TC Logo">
+    <p style="text-align: center">Learn to code with TrueCoder!</p>
+    <p style="text-align: center">
+      <img src="images/truecoders.jpg" alt="TC Logo" />
+    </p>
   </head>
   <body></body>
 </html>
