--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <title>Merge Conflicts</title>
+  </head>
+  <body>
     <p style="text-align: center">Learn to code with TrueCoder!</p>
     <p style="text-align: center">
       <img src="images/truecoders.jpg" alt="TC Logo" />
     </p>
-  </head>
-  <body></body>
+  </body>
 </html>
