--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <title>Merge Conflicts</title>
   </head>
-  <body>
-    <p style="text-align: center">Learn to code with TrueCoder!</p>
-    <p style="text-align: center">
-      <img src="images/truecoders.jpg" alt="TC Logo" />
-    </p>
+  <body style="background-color: burlywood; color:cornflowerblue">
+    <div>
+      <h1 style="text-align: center;">Learn to code with TrueCoders!</h1>
+    </div>
+    <div>
+      <p style="text-align: center">
+        <img src="images/truecoders.jpg" alt="TC Logo" style="border-radius: 20px; box-shadow: 0 10px 10px 0 rgba(37, 37, 37, 0.6);"/>
+      </p>
+    </div>
   </body>
 </html>
