Updated conflict html

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
   <head>
     <title>Merge Conflicts</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Ben's Heading</h1>
+    <p>Here's a paragraph tag</p>
+  </body>
 </html>
