--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Ben's Heading</h1>
     <p>Here's a paragraph tag</p>
+    <textarea name="message" id="messageBox" cols="30" rows="10"></textarea>
   </body>
 </html>
